force-app/main/default/objects/Indication__c/Indication__c.object-meta.xml
<CustomObject>
    <description>Custom indications for an Account, to visualize certain special properties of the person (account)</description>
    <label>Indicatie</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>Indication Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicaties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>