force-app/main/default/objects/Indication__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional information about this indication</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>