force-app/main/default/objects/Indication__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The day this indication ends</description>
    <inlineHelpText>The day this indication ends</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>