force-app/main/default/objects/Indication__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Calculates if the indication is active</description>
    <formula>AND(
OR(ISBLANK(End_Date__c), End_Date__c &gt;  TODAY() ),
OR(Start_Date__c &lt;=  TODAY() )
)</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>