force-app/main/default/objects/Indication__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The moment this indication becomes relevant</description>
    <inlineHelpText>The moment this indication becomes relevant</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>