force-app/main/default/objects/Indication__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this indication</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schrijfverbod</fullName>
                <label>Writing ban</label>
            </value>
            <value>
                <fullName>Belverbod</fullName>
                <label>Call ban</label>
            </value>
            <value>
                <fullName>Kantoorverbod</fullName>
                <label>Visiting ban</label>
            </value>
            <value>
                <fullName>Bezoek met 2</fullName>
                <label>Visiting with 2</label>
            </value>
            <value>
                <fullName>Curatele / Bewind</fullName>
                <isActive>false</isActive>
                <label>Guardianship / Administration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>